Fixed some styling issues on small devices

--- a/client/src/app/pages/cocktails/cocktail-detail/cocktail-detail.component.sass
+++ b/client/src/app/pages/cocktails/cocktail-detail/cocktail-detail.component.sass
@@ -3,6 +3,9 @@
 .box
     margin-top: 2rem;
 
+.table
+    width: 100%
+
 .cocktail-group
     cursor: pointer
     &:hover
