--- a/client/src/app/pages/cocktails/cocktail-list/list-item/list-item.component.sass
+++ b/client/src/app/pages/cocktails/cocktail-list/list-item/list-item.component.sass
@@ -3,6 +3,9 @@
     margin-top: 1rem;
     cursor: pointer
 
+.table
+    width: 100%
+
 .cocktail-group
     cursor: pointer
     &:hover
